syntax = "proto3";

package raft;

option go_package = "./main";


message RaftMessage {
  oneof message {
    AppendEntriesRequest append_entries_request = 1;
    AppendEntriesResponse append_entries_response = 2;
    RequestVoteRequest request_vote_request = 3;
    RequestVoteResponse request_vote_response = 4;
    InstallSnapshotRequest install_snapshot_request = 5;
    InstallSnapshotResponse install_snapshot_response = 6;
  }
}

// Message for AppendEntries request
message AppendEntriesRequest {
  int32 term = 1;
  int32 leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  repeated Entry entries = 5;
  int32 leaderCommit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  int32 followerId = 2;
  int32 ackedIdx = 3;
  bool success = 4;
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
  int32 voterId = 3;
}

message InstallSnapshotRequest {
  int32 term = 1;
  int32 leaderId = 2;
  int32 lastIncludedIndex = 3;
  int32 lastIncludedTerm = 4;
  bytes data = 5;
}

message InstallSnapshotResponse {
  int32 term = 1;
  bool success = 2;
}

message Entry {
  int32 index = 1;
  int32 term = 2;
  string command = 3;
}
